--- a/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
@@ -28,11 +28,11 @@
             <!-- Position Column -->
             <ng-container matColumnDef="WidgetName">
               <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-              <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.WidgetName}}</td>
+              <td mat-cell *matCellDef="let dynamicwidget" title="{{dynamicwidget.WidgetName}}">{{dynamicwidget.WidgetName}}</td>
             </ng-container>
             <ng-container matColumnDef="Product">
               <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef> Page Type </th>
-              <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.PageTypeName}}</td>
+              <td mat-cell *matCellDef="let dynamicwidget" title="{{dynamicwidget.PageTypeName}}">{{dynamicwidget.PageTypeName}}</td>
             </ng-container>
 
             <ng-container matColumnDef="Entity">
