--- a/App/ClientApp/src/app/layout/widget-dynamic/view/view.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/view/view.component.html
@@ -113,6 +113,17 @@
                 <label class="text-center width100 pt-2 m-0 widget-name">Pie Chart</label>
               </div>
               <!--repeat end-->
+              <!--repeat start-->
+              <div class="widget-card-small widget-card" [checked]="selectedLink=='Html'">
+                <div class="hide-radio widget-icons">
+                  <label>
+                    <input type="radio" name="widgetType" id="inputWidgetHtml" [checked]="selectedLink=='Html'">
+                    <span class="fa fa-code"></span>
+                  </label>
+                </div>
+                <label class="text-center width100 pt-2 m-0 widget-name">HTML</label>
+              </div>
+              <!--repeat end-->
             </div>
           </div>
           <!--if form-->
@@ -308,7 +319,7 @@
                   <input class="custom-control-input" type="radio" disabled
                          name="themeoption" id="Custome" value="option1" [checked]="isCustome">
                   <label class="custom-control-label dir-rtl" for="Custome">
-                    Custome
+                    Custom
                   </label>
                 </div>
               </div>
@@ -411,14 +422,14 @@
           </div>
         </div>
 
-       
+
       </div>
     </div>
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2"  *ngIf="dynamicWidgetDetails.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Edit' }))" id="btnSave" (click)="navigationToEditDynamicWidget()">Update</button>
-      <button class="btn-footer-fill-delete bg-danger mr-2" *ngIf="(userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Delete' })"  id="btnDelete" (click)="DeleteDynamicWidget()">Delete</button>
+      <button class="btn-footer-fill mr-2" *ngIf="dynamicWidgetDetails.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Edit' }))" id="btnSave" (click)="navigationToEditDynamicWidget()">Update</button>
+      <button class="btn-footer-fill-delete bg-danger mr-2" *ngIf="(userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Delete' })" id="btnDelete" (click)="DeleteDynamicWidget()">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
