--- a/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
@@ -482,6 +482,12 @@
                     <div class="col-md-3 col-sm-6">
                       <label> Size</label><span class="text-danger ml-2">*</span>
                       <input type="number" formControlName="TitleSize" class="form-control" />
+                      <div class="validation-msg" style="color:red">
+                        <ul *ngIf="TitleSize.touched && TitleSize.errors" style="list-style-type:none">
+                          <li class="text-danger" *ngIf="TitleSize.errors?.pattern">Inavid image height</li>
+                          <li class="text-danger" *ngIf="TitleSize.errors?.required">Image height required</li>
+                        </ul>
+                      </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                       <label> Weight</label><span class="text-danger ml-2">*</span>
@@ -515,6 +521,12 @@
                     <div class="col-md-3 col-sm-6">
                       <label> Size</label><span class="text-danger ml-2">*</span>
                       <input type="number" class="form-control" formControlName="HeaderSize" />
+                      <div class="validation-msg" style="color:red">
+                        <ul *ngIf="HeaderSize.touched && HeaderSize.errors" style="list-style-type:none">
+                          <li class="text-danger" *ngIf="HeaderSize.errors?.pattern">Inavid image height</li>
+                          <li class="text-danger" *ngIf="HeaderSize.errors?.required">Image height required</li>
+                        </ul>
+                      </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                       <label> Weight</label><span class="text-danger ml-2">*</span>
@@ -534,6 +546,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="card bg-light border-card form-group">
                 <div class="card-header bg-white">
                   <label class="mb-0">Data Font</label>
@@ -547,6 +560,12 @@
                     <div class="col-md-3 col-sm-6">
                       <label> Size</label><span class="text-danger ml-2">*</span>
                       <input type="number" class="form-control" formControlName="DataSize" />
+                      <div class="validation-msg" style="color:red">
+                        <ul *ngIf="DataSize.touched && DataSize.errors" style="list-style-type:none">
+                          <li class="text-danger" *ngIf="DataSize.errors?.pattern">Inavid image height</li>
+                          <li class="text-danger" *ngIf="DataSize.errors?.required">Image height required</li>
+                        </ul>
+                      </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                       <label> Weight</label><span class="text-danger ml-2">*</span>
